--- a/assets/scss/templates/_sucess_stories.scss
+++ b/assets/scss/templates/_sucess_stories.scss
@@ -11,6 +11,9 @@
         background: $secondary-color;
         min-height: 420px;
         padding: 30px;
+        @include tablet{
+            min-height: unset;
+        }
         h3 {
             font-size: 20px;
             text-align: right;
